--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
     <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <script>
+        // Suppress Tailwind production warning
+        const originalWarn = console.warn;
+        console.warn = function(...args) {
+            if (typeof args[0] === 'string' && args[0].includes('cdn.tailwindcss.com')) return;
+            originalWarn.apply(console, args);
+        };
+    </script>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.5.1/css/all.min.css">
     <style>
         body { background-color: #000000; color: #ffffff; }
         .bg-purple-dark { background-color: #0a0a0a; }
@@ -270,7 +278,7 @@
                 <!-- Section API Keys -->
                 <div class="space-y-4">
                     <h3 class="text-[10px] font-bold text-purple-400 uppercase tracking-widest border-b border-purple-500/20 pb-2">Comptes Rentman (Clés API)</h3>
-                    <div class="bg-black/40 p-4 rounded-2xl border border-white/5 space-y-4">
+                    <div id="adminOnlyApiKeys" class="hidden bg-black/40 p-4 rounded-2xl border border-white/5 space-y-4">
                         <div class="grid grid-cols-1 gap-3">
                             <input type="text" id="newKeyName" placeholder="Nom du profil (ex: Impact Vision)" class="w-full bg-black border border-white/10 rounded-xl px-4 py-3 text-sm outline-none focus:border-purple-500 transition-all">
                             <input type="password" id="newKeyValue" placeholder="Clé API Rentman" class="w-full bg-black border border-white/10 rounded-xl px-4 py-3 text-sm outline-none focus:border-purple-500 transition-all">
@@ -324,6 +332,12 @@
             let userData = JSON.parse(localStorage.getItem(`user_${currentUser}`));
             if (!userData) return;
 
+            const isAdmin = currentUser === 'GOOD' || userData.role === 'admin';
+            if (isAdmin) {
+                const adminSection = document.getElementById('adminOnlyApiKeys');
+                if (adminSection) adminSection.classList.remove('hidden');
+            }
+
             // Migration logic for old API keys
             const oldKey = localStorage.getItem('rentman_api_key');
             if (oldKey && (!userData.apiKeys || userData.apiKeys.length === 0)) {
@@ -357,6 +371,8 @@
             const list = document.getElementById('keysList');
             list.innerHTML = '';
 
+            const isAdmin = currentUser === 'GOOD' || (userData && userData.role === 'admin');
+
             if (userData && userData.apiKeys) {
                 userData.apiKeys.forEach((key, index) => {
                     const item = document.createElement('div');
@@ -366,9 +382,11 @@
                             <span class="text-xs font-bold text-white">${key.name}</span>
                             <span class="text-[8px] text-gray-500 font-mono">CLE: ••••••••••••</span>
                         </div>
+                        ${isAdmin ? `
                         <button onclick="deleteKey(${index})" class="bg-red-500/10 hover:bg-red-500 text-red-500 hover:text-white p-2 rounded-lg transition-all text-[10px] uppercase font-bold">
                             Supprimer
                         </button>
+                        ` : ''}
                     `;
                     list.appendChild(item);
                 });
@@ -376,6 +394,10 @@
         }
 
         function addApiKey() {
+            const userDataCheck = JSON.parse(localStorage.getItem(`user_${currentUser}`));
+            const isAdmin = currentUser === 'GOOD' || (userDataCheck && userDataCheck.role === 'admin');
+            if (!isAdmin) return alert("Action réservée aux administrateurs.");
+
             const name = document.getElementById('newKeyName').value;
             const value = document.getElementById('newKeyValue').value;
             if (!name || !value) return alert("Remplissez tous les champs.");
@@ -392,6 +414,10 @@
         }
 
         function deleteKey(index) {
+            const userDataCheck = JSON.parse(localStorage.getItem(`user_${currentUser}`));
+            const isAdmin = currentUser === 'GOOD' || (userDataCheck && userDataCheck.role === 'admin');
+            if (!isAdmin) return alert("Action réservée aux administrateurs.");
+
             if (!confirm("Supprimer ce compte Rentman ?")) return;
             let userData = JSON.parse(localStorage.getItem(`user_${currentUser}`));
             userData.apiKeys.splice(index, 1);
